lexical/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> programa
Rule 1     programa -> PROGRAM ID class context
Rule 2     programa -> PROGRAM ID context
Rule 3     class -> scope CLASS ID
Rule 4     class -> scope CLASS ID COLON ID
Rule 5     context -> LBRACE aux6 RBRACE
Rule 6     aux6 -> vars
Rule 7     aux6 -> constructor
Rule 8     aux6 -> funcion
Rule 9     aux6 -> estatuto
Rule 10    aux6 -> condicion
Rule 11    aux6 -> ciclo
Rule 12    aux6 -> vars aux6
Rule 13    aux6 -> constructor aux6
Rule 14    aux6 -> funcion aux6
Rule 15    aux6 -> estatuto aux6
Rule 16    aux6 -> condicion aux6
Rule 17    aux6 -> ciclo aux6
Rule 18    condicion -> IF LPAREN gotoF RPAREN bloque
Rule 19    condicion -> IF LPAREN gotoF RPAREN bloque elif
Rule 20    elif -> aux_elif ELIF LPAREN gotoF RPAREN bloque
Rule 21    elif -> aux_elif ELIF LPAREN gotoF RPAREN bloque elif
Rule 22    aux_elif -> <empty>
Rule 23    ciclo -> aux_ciclo WHILE LPAREN gotoF RPAREN bloque
Rule 24    aux_ciclo -> <empty>
Rule 25    constructor -> PUBLIC ID LPAREN param RPAREN bloque
Rule 26    bloque -> LBRACE aux5 RBRACE
Rule 27    funcion -> scope type DEF id LPAREN param aux_param RPAREN contexto_func
Rule 28    funcion -> scope VOID DEF id LPAREN param aux_param RPAREN contexto_func
Rule 29    id -> ID
Rule 30    type -> INT
Rule 31    type -> FLOAT
Rule 32    type -> CHAR
Rule 33    contexto_func -> LBRACE aux5 RBRACE
Rule 34    contexto_func -> LBRACE aux5 RETURN ID RBRACE
Rule 35    aux5 -> vars
Rule 36    aux5 -> estatuto
Rule 37    aux5 -> vars aux5
Rule 38    aux5 -> estatuto aux5
Rule 39    param -> <empty>
Rule 40    param -> tipo_simple ID
Rule 41    param -> tipo_simple ID COMMA param
Rule 42    aux_param -> <empty>
Rule 43    scope -> <empty>
Rule 44    scope -> PRIVATE
Rule 45    scope -> PUBLIC
Rule 46    scope -> PROTECTED
Rule 47    estatuto -> asignacion
Rule 48    estatuto -> escritura
Rule 49    estatuto -> llamada_func
Rule 50    estatuto -> objeto_metodo
Rule 51    estatuto -> lectura
Rule 52    lectura -> READ LPAREN aux4 RPAREN
Rule 53    aux4 -> ID
Rule 54    aux4 -> objeto_aAcceso
Rule 55    aux4 -> ID COMMA aux4
Rule 56    aux4 -> objeto_aAcceso COMMA aux4
Rule 57    escritura -> PRINT LPAREN aux3 RPAREN
Rule 58    aux3 -> expresion
Rule 59    aux3 -> llamada_func
Rule 60    aux3 -> objeto_metodo
Rule 61    aux3 -> CSTRING
Rule 62    aux3 -> expresion COMMA aux3
Rule 63    aux3 -> llamada_func COMMA aux3
Rule 64    aux3 -> objeto_metodo COMMA aux3
Rule 65    aux3 -> CSTRING COMMA aux3
Rule 66    vars -> VAR aux2 COLON tipo_simple
Rule 67    vars -> VAR aux2 COLON tipo_compuesto
Rule 68    vars -> VAR ID LBRACKET cint RBRACKET COLON tipo_simple
Rule 69    vars -> VAR ID LBRACKET cint RBRACKET COLON tipo_compuesto
Rule 70    vars -> VAR ID LBRACKET cint RBRACKET LBRACKET cint RBRACKET COLON tipo_simple
Rule 71    vars -> VAR ID LBRACKET cint RBRACKET LBRACKET cint RBRACKET COLON tipo_compuesto
Rule 72    aux2 -> ID
Rule 73    aux2 -> ID COMMA aux2
Rule 74    tipo_simple -> INT
Rule 75    tipo_simple -> FLOAT
Rule 76    tipo_simple -> CHAR
Rule 77    tipo_compuesto -> ID
Rule 78    asignacion -> ID EQUALS expresion
Rule 79    asignacion -> ID EQUALS llamada_func
Rule 80    asignacion -> ID EQUALS objeto_metodo
Rule 81    asignacion -> objeto_aAcceso EQUALS expresion
Rule 82    asignacion -> objeto_aAcceso EQUALS llamada_func
Rule 83    asignacion -> objeto_aAcceso EQUALS objeto_metodo
Rule 84    asignacion -> ID LBRACKET exp RBRACKET EQUALS expresion
Rule 85    asignacion -> ID LBRACKET exp RBRACKET EQUALS llamada_func
Rule 86    asignacion -> ID LBRACKET exp RBRACKET EQUALS objeto_metodo
Rule 87    asignacion -> objeto_aAcceso LBRACKET exp RBRACKET EQUALS expresion
Rule 88    asignacion -> objeto_aAcceso LBRACKET exp RBRACKET EQUALS llamada_func
Rule 89    asignacion -> objeto_aAcceso LBRACKET exp RBRACKET EQUALS objeto_metodo
Rule 90    asignacion -> ID LBRACKET exp RBRACKET LBRACKET exp RBRACKET EQUALS expresion
Rule 91    asignacion -> ID LBRACKET exp RBRACKET LBRACKET exp RBRACKET EQUALS llamada_func
Rule 92    asignacion -> ID LBRACKET exp RBRACKET LBRACKET exp RBRACKET EQUALS objeto_metodo
Rule 93    asignacion -> objeto_aAcceso LBRACKET LBRACKET exp RBRACKET exp RBRACKET EQUALS expresion
Rule 94    asignacion -> objeto_aAcceso LBRACKET LBRACKET exp RBRACKET exp RBRACKET EQUALS llamada_func
Rule 95    asignacion -> objeto_aAcceso LBRACKET LBRACKET exp RBRACKET exp RBRACKET EQUALS objeto_metodo
Rule 96    objeto_metodo -> ID PERIOD llamada_func
Rule 97    llamada_func -> ID LPAREN aux RPAREN
Rule 98    aux -> exp
Rule 99    aux -> exp COMMA aux
Rule 100   gotoF -> exp_cond
Rule 101   exp_cond -> exp_bool
Rule 102   exp_cond -> exp_bool AND exp_cond
Rule 103   exp_cond -> exp_bool OR exp_cond
Rule 104   exp_bool -> TRUE
Rule 105   exp_bool -> FALSE
Rule 106   exp_bool -> expresion
Rule 107   expresion -> exp
Rule 108   expresion -> exp LT expresion
Rule 109   expresion -> exp GT expresion
Rule 110   expresion -> exp GE expresion
Rule 111   expresion -> exp LE expresion
Rule 112   expresion -> exp EQ expresion
Rule 113   expresion -> exp NE expresion
Rule 114   exp -> termino
Rule 115   exp -> exp PLUS termino
Rule 116   exp -> exp MINUS termino
Rule 117   termino -> factor
Rule 118   termino -> termino TIMES factor
Rule 119   termino -> termino DIVIDE factor
Rule 120   termino -> termino MODULO factor
Rule 121   factor -> LPAREN exp_cond RPAREN
Rule 122   factor -> PLUS objeto_aAcceso
Rule 123   factor -> MINUS objeto_aAcceso
Rule 124   factor -> PLUS var
Rule 125   factor -> MINUS var
Rule 126   factor -> var
Rule 127   factor -> objeto_aAcceso
Rule 128   var -> ID
Rule 129   var -> cint
Rule 130   var -> cfloat
Rule 131   var -> cchar
Rule 132   cint -> CINT
Rule 133   cfloat -> NUMBER
Rule 134   cchar -> CCHAR
Rule 135   objeto_aAcceso -> ID PERIOD ID

Terminals, with rules where they appear

AND                  : 102
CCHAR                : 134
CHAR                 : 32 76
CINT                 : 132
CLASS                : 3 4
COLON                : 4 66 67 68 69 70 71
COMMA                : 41 55 56 62 63 64 65 73 99
CSTRING              : 61 65
DEF                  : 27 28
DIVIDE               : 119
ELIF                 : 20 21
EQ                   : 112
EQUALS               : 78 79 80 81 82 83 84 85 86 87 88 89 90 91 92 93 94 95
FALSE                : 105
FLOAT                : 31 75
GE                   : 110
GT                   : 109
ID                   : 1 2 3 4 4 25 29 34 40 41 53 55 68 69 70 71 72 73 77 78 79 80 84 85 86 90 91 92 96 97 128 135 135
IF                   : 18 19
INT                  : 30 74
LBRACE               : 5 26 33 34
LBRACKET             : 68 69 70 70 71 71 84 85 86 87 88 89 90 90 91 91 92 92 93 93 94 94 95 95
LE                   : 111
LPAREN               : 18 19 20 21 23 25 27 28 52 57 97 121
LT                   : 108
MINUS                : 116 123 125
MODULO               : 120
NE                   : 113
NUMBER               : 133
OR                   : 103
PERIOD               : 96 135
PLUS                 : 115 122 124
PRINT                : 57
PRIVATE              : 44
PROGRAM              : 1 2
PROTECTED            : 46
PUBLIC               : 25 45
RBRACE               : 5 26 33 34
RBRACKET             : 68 69 70 70 71 71 84 85 86 87 88 89 90 90 91 91 92 92 93 93 94 94 95 95
READ                 : 52
RETURN               : 34
RPAREN               : 18 19 20 21 23 25 27 28 52 57 97 121
TIMES                : 118
TRUE                 : 104
VAR                  : 66 67 68 69 70 71
VOID                 : 28
WHILE                : 23
error                : 

Nonterminals, with rules where they appear

asignacion           : 47
aux                  : 97 99
aux2                 : 66 67 73
aux3                 : 57 62 63 64 65
aux4                 : 52 55 56
aux5                 : 26 33 34 37 38
aux6                 : 5 12 13 14 15 16 17
aux_ciclo            : 23
aux_elif             : 20 21
aux_param            : 27 28
bloque               : 18 19 20 21 23 25
cchar                : 131
cfloat               : 130
ciclo                : 11 17
cint                 : 68 69 70 70 71 71 129
class                : 1
condicion            : 10 16
constructor          : 7 13
context              : 1 2
contexto_func        : 27 28
elif                 : 19 21
escritura            : 48
estatuto             : 9 15 36 38
exp                  : 84 85 86 87 88 89 90 90 91 91 92 92 93 93 94 94 95 95 98 99 107 108 109 110 111 112 113 115 116
exp_bool             : 101 102 103
exp_cond             : 100 102 103 121
expresion            : 58 62 78 81 84 87 90 93 106 108 109 110 111 112 113
factor               : 117 118 119 120
funcion              : 8 14
gotoF                : 18 19 20 21 23
id                   : 27 28
lectura              : 51
llamada_func         : 49 59 63 79 82 85 88 91 94 96
objeto_aAcceso       : 54 56 81 82 83 87 88 89 93 94 95 122 123 127
objeto_metodo        : 50 60 64 80 83 86 89 92 95
param                : 25 27 28 41
programa             : 0
scope                : 3 4 27 28
termino              : 114 115 116 118 119 120
tipo_compuesto       : 67 69 71
tipo_simple          : 40 41 66 68 70
type                 : 27
var                  : 124 125 126
vars                 : 6 12 35 37

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . PROGRAM ID class context
    (2) programa -> . PROGRAM ID context

    PROGRAM         shift and go to state 2

    programa                       shift and go to state 1

state 1

    (0) S' -> programa .



state 2

    (1) programa -> PROGRAM . ID class context
    (2) programa -> PROGRAM . ID context

    ID              shift and go to state 3


state 3

    (1) programa -> PROGRAM ID . class context
    (2) programa -> PROGRAM ID . context
    (3) class -> . scope CLASS ID
    (4) class -> . scope CLASS ID COLON ID
    (5) context -> . LBRACE aux6 RBRACE
    (43) scope -> .
    (44) scope -> . PRIVATE
    (45) scope -> . PUBLIC
    (46) scope -> . PROTECTED

    LBRACE          shift and go to state 7
    CLASS           reduce using rule 43 (scope -> .)
    PRIVATE         shift and go to state 8
    PUBLIC          shift and go to state 9
    PROTECTED       shift and go to state 10

    class                          shift and go to state 4
    context                        shift and go to state 5
    scope                          shift and go to state 6

state 4

    (1) programa -> PROGRAM ID class . context
    (5) context -> . LBRACE aux6 RBRACE

    LBRACE          shift and go to state 7

    context                        shift and go to state 11

state 5

    (2) programa -> PROGRAM ID context .

    $end            reduce using rule 2 (programa -> PROGRAM ID context .)


state 6

    (3) class -> scope . CLASS ID
    (4) class -> scope . CLASS ID COLON ID

    CLASS           shift and go to state 12


state 7

    (5) context -> LBRACE . aux6 RBRACE
    (6) aux6 -> . vars
    (7) aux6 -> . constructor
    (8) aux6 -> . funcion
    (9) aux6 -> . estatuto
    (10) aux6 -> . condicion
    (11) aux6 -> . ciclo
    (12) aux6 -> . vars aux6
    (13) aux6 -> . constructor aux6
    (14) aux6 -> . funcion aux6
    (15) aux6 -> . estatuto aux6
    (16) aux6 -> . condicion aux6
    (17) aux6 -> . ciclo aux6
    (66) vars -> . VAR aux2 COLON tipo_simple
    (67) vars -> . VAR aux2 COLON tipo_compuesto
    (68) vars -> . VAR ID LBRACKET cint RBRACKET COLON tipo_simple
    (69) vars -> . VAR ID LBRACKET cint RBRACKET COLON tipo_compuesto
    (70) vars -> . VAR ID LBRACKET cint RBRACKET LBRACKET cint RBRACKET COLON tipo_simple
    (71) vars -> . VAR ID LBRACKET cint RBRACKET LBRACKET cint RBRACKET COLON tipo_compuesto
    (25) constructor -> . PUBLIC ID LPAREN param RPAREN bloque
    (27) funcion -> . scope type DEF id LPAREN param aux_param RPAREN contexto_func
    (28) funcion -> . scope VOID DEF id LPAREN param aux_param RPAREN contexto_func
    (47) estatuto -> . asignacion
    (48) estatuto -> . escritura
    (49) estatuto -> . llamada_func
    (50) estatuto -> . objeto_metodo
    (51) estatuto -> . lectura
    (18) condicion -> . IF LPAREN gotoF RPAREN bloque
    (19) condicion -> . IF LPAREN gotoF RPAREN bloque elif
    (23) ciclo -> . aux_ciclo WHILE LPAREN gotoF RPAREN bloque
    (43) scope -> .
    (44) scope -> . PRIVATE
    (45) scope -> . PUBLIC
    (46) scope -> . PROTECTED
    (78) asignacion -> . ID EQUALS expresion
    (79) asignacion -> . ID EQUALS llamada_func
    (80) asignacion -> . ID EQUALS objeto_metodo
    (81) asignacion -> . objeto_aAcceso EQUALS expresion
    (82) asignacion -> . objeto_aAcceso EQUALS llamada_func
    (83) asignacion -> . objeto_aAcceso EQUALS objeto_metodo
    (84) asignacion -> . ID LBRACKET exp RBRACKET EQUALS expresion
    (85) asignacion -> . ID LBRACKET exp RBRACKET EQUALS llamada_func
    (86) asignacion -> . ID LBRACKET exp RBRACKET EQUALS objeto_metodo
    (87) asignacion -> . objeto_aAcceso LBRACKET exp RBRACKET EQUALS expresion
    (88) asignacion -> . objeto_aAcceso LBRACKET exp RBRACKET EQUALS llamada_func
    (89) asignacion -> . objeto_aAcceso LBRACKET exp RBRACKET EQUALS objeto_metodo
    (90) asignacion -> . ID LBRACKET exp RBRACKET LBRACKET exp RBRACKET EQUALS expresion
    (91) asignacion -> . ID LBRACKET exp RBRACKET LBRACKET exp RBRACKET EQUALS llamada_func
    (92) asignacion -> . ID LBRACKET exp RBRACKET LBRACKET exp RBRACKET EQUALS objeto_metodo
    (93) asignacion -> . objeto_aAcceso LBRACKET LBRACKET exp RBRACKET exp RBRACKET EQUALS expresion
    (94) asignacion -> . objeto_aAcceso LBRACKET LBRACKET exp RBRACKET exp RBRACKET EQUALS llamada_func
    (95) asignacion -> . objeto_aAcceso LBRACKET LBRACKET exp RBRACKET exp RBRACKET EQUALS objeto_metodo
    (57) escritura -> . PRINT LPAREN aux3 RPAREN
    (97) llamada_func -> . ID LPAREN aux RPAREN
    (96) objeto_metodo -> . ID PERIOD llamada_func
    (52) lectura -> . READ LPAREN aux4 RPAREN
    (24) aux_ciclo -> .
    (135) objeto_aAcceso -> . ID PERIOD ID

    VAR             shift and go to state 20
    PUBLIC          shift and go to state 22
    IF              shift and go to state 29
    VOID            reduce using rule 43 (scope -> .)
    INT             reduce using rule 43 (scope -> .)
    FLOAT           reduce using rule 43 (scope -> .)
    CHAR            reduce using rule 43 (scope -> .)
    PRIVATE         shift and go to state 8
    PROTECTED       shift and go to state 10
    ID              shift and go to state 21
    PRINT           shift and go to state 32
    READ            shift and go to state 33
    WHILE           reduce using rule 24 (aux_ciclo -> .)

    aux6                           shift and go to state 13
    vars                           shift and go to state 14
    constructor                    shift and go to state 15
    funcion                        shift and go to state 16
    estatuto                       shift and go to state 17
    condicion                      shift and go to state 18
    ciclo                          shift and go to state 19
    scope                          shift and go to state 23
    asignacion                     shift and go to state 24
    escritura                      shift and go to state 25
    llamada_func                   shift and go to state 26
    objeto_metodo                  shift and go to state 27
    lectura                        shift and go to state 28
    aux_ciclo                      shift and go to state 30
    objeto_aAcceso                 shift and go to state 31

state 8

    (44) scope -> PRIVATE .

    CLASS           reduce using rule 44 (scope -> PRIVATE .)
    VOID            reduce using rule 44 (scope -> PRIVATE .)
    INT             reduce using rule 44 (scope -> PRIVATE .)
    FLOAT           reduce using rule 44 (scope -> PRIVATE .)
    CHAR            reduce using rule 44 (scope -> PRIVATE .)


state 9

    (45) scope -> PUBLIC .

    CLASS           reduce using rule 45 (scope -> PUBLIC .)


state 10

    (46) scope -> PROTECTED .

    CLASS           reduce using rule 46 (scope -> PROTECTED .)
    VOID            reduce using rule 46 (scope -> PROTECTED .)
    INT             reduce using rule 46 (scope -> PROTECTED .)
    FLOAT           reduce using rule 46 (scope -> PROTECTED .)
    CHAR            reduce using rule 46 (scope -> PROTECTED .)


state 11

    (1) programa -> PROGRAM ID class context .

    $end            reduce using rule 1 (programa -> PROGRAM ID class context .)


state 12

    (3) class -> scope CLASS . ID
    (4) class -> scope CLASS . ID COLON ID

    ID              shift and go to state 34


state 13

    (5) context -> LBRACE aux6 . RBRACE

    RBRACE          shift and go to state 35


state 14

    (6) aux6 -> vars .
    (12) aux6 -> vars . aux6
    (6) aux6 -> . vars
    (7) aux6 -> . constructor
    (8) aux6 -> . funcion
    (9) aux6 -> . estatuto
    (10) aux6 -> . condicion
    (11) aux6 -> . ciclo
    (12) aux6 -> . vars aux6
    (13) aux6 -> . constructor aux6
    (14) aux6 -> . funcion aux6
    (15) aux6 -> . estatuto aux6
    (16) aux6 -> . condicion aux6
    (17) aux6 -> . ciclo aux6
    (66) vars -> . VAR aux2 COLON tipo_simple
    (67) vars -> . VAR aux2 COLON tipo_compuesto
    (68) vars -> . VAR ID LBRACKET cint RBRACKET COLON tipo_simple
    (69) vars -> . VAR ID LBRACKET cint RBRACKET COLON tipo_compuesto
    (70) vars -> . VAR ID LBRACKET cint RBRACKET LBRACKET cint RBRACKET COLON tipo_simple
    (71) vars -> . VAR ID LBRACKET cint RBRACKET LBRACKET cint RBRACKET COLON tipo_compuesto
    (25) constructor -> . PUBLIC ID LPAREN param RPAREN bloque
    (27) funcion -> . scope type DEF id LPAREN param aux_param RPAREN contexto_func
    (28) funcion -> . scope VOID DEF id LPAREN param aux_param RPAREN contexto_func
    (47) estatuto -> . asignacion
    (48) estatuto -> . escritura
    (49) estatuto -> . llamada_func
    (50) estatuto -> . objeto_metodo
    (51) estatuto -> . lectura
    (18) condicion -> . IF LPAREN gotoF RPAREN bloque
    (19) condicion -> . IF LPAREN gotoF RPAREN bloque elif
    (23) ciclo -> . aux_ciclo WHILE LPAREN gotoF RPAREN bloque
    (43) scope -> .
    (44) scope -> . PRIVATE
    (45) scope -> . PUBLIC
    (46) scope -> . PROTECTED
    (78) asignacion -> . ID EQUALS expresion
    (79) asignacion -> . ID EQUALS llamada_func
    (80) asignacion -> . ID EQUALS objeto_metodo
    (81) asignacion -> . objeto_aAcceso EQUALS expresion
    (82) asignacion -> . objeto_aAcceso EQUALS llamada_func
    (83) asignacion -> . objeto_aAcceso EQUALS objeto_metodo
    (84) asignacion -> . ID LBRACKET exp RBRACKET EQUALS expresion
    (85) asignacion -> . ID LBRACKET exp RBRACKET EQUALS llamada_func
    (86) asignacion -> . ID LBRACKET exp RBRACKET EQUALS objeto_metodo
    (87) asignacion -> . objeto_aAcceso LBRACKET exp RBRACKET EQUALS expresion
    (88) asignacion -> . objeto_aAcceso LBRACKET exp RBRACKET EQUALS llamada_func
    (89) asignacion -> . objeto_aAcceso LBRACKET exp RBRACKET EQUALS objeto_metodo
    (90) asignacion -> . ID LBRACKET exp RBRACKET LBRACKET exp RBRACKET EQUALS expresion
    (91) asignacion -> . ID LBRACKET exp RBRACKET LBRACKET exp RBRACKET EQUALS llamada_func
    (92) asignacion -> . ID LBRACKET exp RBRACKET LBRACKET exp RBRACKET EQUALS objeto_metodo
    (93) asignacion -> . objeto_aAcceso LBRACKET LBRACKET exp RBRACKET exp RBRACKET EQUALS expresion
    (94) asignacion -> . objeto_aAcceso LBRACKET LBRACKET exp RBRACKET exp RBRACKET EQUALS llamada_func
    (95) asignacion -> . objeto_aAcceso LBRACKET LBRACKET exp RBRACKET exp RBRACKET EQUALS objeto_metodo
    (57) escritura -> . PRINT LPAREN aux3 RPAREN
    (97) llamada_func -> . ID LPAREN aux RPAREN
    (96) objeto_metodo -> . ID PERIOD llamada_func
    (52) lectura -> . READ LPAREN aux4 RPAREN
    (24) aux_ciclo -> .
    (135) objeto_aAcceso -> . ID PERIOD ID

    RBRACE          reduce using rule 6 (aux6 -> vars .)
    VAR             shift and go to state 20
    PUBLIC          shift and go to state 22
    IF              shift and go to state 29
    VOID            reduce using rule 43 (scope -> .)
    INT             reduce using rule 43 (scope -> .)
    FLOAT           reduce using rule 43 (scope -> .)
    CHAR            reduce using rule 43 (scope -> .)
    PRIVATE         shift and go to state 8
    PROTECTED       shift and go to state 10
    ID              shift and go to state 21
    PRINT           shift and go to state 32
    READ            shift and go to state 33
    WHILE           reduce using rule 24 (aux_ciclo -> .)

    vars                           shift and go to state 14
    aux6                           shift and go to state 36
    constructor                    shift and go to state 15
    funcion                        shift and go to state 16
    estatuto                       shift and go to state 17
    condicion                      shift and go to state 18
    ciclo                          shift and go to state 19
    scope                          shift and go to state 23
    asignacion                     shift and go to state 24
    escritura                      shift and go to state 25
    llamada_func                   shift and go to state 26
    objeto_metodo                  shift and go to state 27
    lectura                        shift and go to state 28
    aux_ciclo                      shift and go to state 30
    objeto_aAcceso                 shift and go to state 31

state 15

    (7) aux6 -> constructor .
    (13) aux6 -> constructor . aux6
    (6) aux6 -> . vars
    (7) aux6 -> . constructor
    (8) aux6 -> . funcion
    (9) aux6 -> . estatuto
    (10) aux6 -> . condicion
    (11) aux6 -> . ciclo
    (12) aux6 -> . vars aux6
    (13) aux6 -> . constructor aux6
    (14) aux6 -> . funcion aux6
    (15) aux6 -> . estatuto aux6
    (16) aux6 -> . condicion aux6
    (17) aux6 -> . ciclo aux6
    (66) vars -> . VAR aux2 COLON tipo_simple
    (67) vars -> . VAR aux2 COLON tipo_compuesto
    (68) vars -> . VAR ID LBRACKET cint RBRACKET COLON tipo_simple
    (69) vars -> . VAR ID LBRACKET cint RBRACKET COLON tipo_compuesto
    (70) vars -> . VAR ID LBRACKET cint RBRACKET LBRACKET cint RBRACKET COLON tipo_simple
    (71) vars -> . VAR ID LBRACKET cint RBRACKET LBRACKET cint RBRACKET COLON tipo_compuesto
    (25) constructor -> . PUBLIC ID LPAREN param RPAREN bloque
    (27) funcion -> . scope type DEF id LPAREN param aux_param RPAREN contexto_func
    (28) funcion -> . scope VOID DEF id LPAREN param aux_param RPAREN contexto_func
    (47) estatuto -> . asignacion
    (48) estatuto -> . escritura
    (49) estatuto -> . llamada_func
    (50) estatuto -> . objeto_metodo
    (51) estatuto -> . lectura
    (18) condicion -> . IF LPAREN gotoF RPAREN bloque
    (19) condicion -> . IF LPAREN gotoF RPAREN bloque elif
    (23) ciclo -> . aux_ciclo WHILE LPAREN gotoF RPAREN bloque
    (43) scope -> .
    (44) scope -> . PRIVATE
    (45) scope -> . PUBLIC
    (46) scope -> . PROTECTED
    (78) asignacion -> . ID EQUALS expresion
    (79) asignacion -> . ID EQUALS llamada_func
    (80) asignacion -> . ID EQUALS objeto_metodo
    (81) asignacion -> . objeto_aAcceso EQUALS expresion
    (82) asignacion -> . objeto_aAcceso EQUALS llamada_func
    (83) asignacion -> . objeto_aAcceso EQUALS objeto_metodo
    (84) asignacion -> . ID LBRACKET exp RBRACKET EQUALS expresion
    (85) asignacion -> . ID LBRACKET exp RBRACKET EQUALS llamada_func
    (86) asignacion -> . ID LBRACKET exp RBRACKET EQUALS objeto_metodo
    (87) asignacion -> . objeto_aAcceso LBRACKET exp RBRACKET EQUALS expresion
    (88) asignacion -> . objeto_aAcceso LBRACKET exp RBRACKET EQUALS llamada_func
    (89) asignacion -> . objeto_aAcceso LBRACKET exp RBRACKET EQUALS objeto_metodo
    (90) asignacion -> . ID LBRACKET exp RBRACKET LBRACKET exp RBRACKET EQUALS expresion
    (91) asignacion -> . ID LBRACKET exp RBRACKET LBRACKET exp RBRACKET EQUALS llamada_func
    (92) asignacion -> . ID LBRACKET exp RBRACKET LBRACKET exp RBRACKET EQUALS objeto_metodo
    (93) asignacion -> . objeto_aAcceso LBRACKET LBRACKET exp RBRACKET exp RBRACKET EQUALS expresion
    (94) asignacion -> . objeto_aAcceso LBRACKET LBRACKET exp RBRACKET exp RBRACKET EQUALS llamada_func
    (95) asignacion -> . objeto_aAcceso LBRACKET LBRACKET exp RBRACKET exp RBRACKET EQUALS objeto_metodo
    (57) escritura -> . PRINT LPAREN aux3 RPAREN
    (97) llamada_func -> . ID LPAREN aux RPAREN
    (96) objeto_metodo -> . ID PERIOD llamada_func
    (52) lectura -> . READ LPAREN aux4 RPAREN
    (24) aux_ciclo -> .
    (135) objeto_aAcceso -> . ID PERIOD ID

    RBRACE          reduce using rule 7 (aux6 -> constructor .)
    VAR             shift and go to state 20
    PUBLIC          shift and go to state 22
    IF              shift and go to state 29
    VOID            reduce using rule 43 (scope -> .)
    INT             reduce using rule 43 (scope -> .)
    FLOAT           reduce using rule 43 (scope -> .)
    CHAR            reduce using rule 43 (scope -> .)
    PRIVATE         shift and go to state 8
    PROTECTED       shift and go to state 10
    ID              shift and go to state 21
    PRINT           shift and go to state 32
    READ            shift and go to state 33
    WHILE           reduce using rule 24 (aux_ciclo -> .)

    constructor                    shift and go to state 15
    aux6                           shift and go to state 37
    vars                           shift and go to state 14
    funcion                        shift and go to state 16
    estatuto                       shift and go to state 17
    condicion                      shift and go to state 18
    ciclo                          shift and go to state 19
    scope                          shift and go to state 23
    asignacion                     shift and go to state 24
    escritura                      shift and go to state 25
    llamada_func                   shift and go to state 26
    objeto_metodo                  shift and go to state 27
    lectura                        shift and go to state 28
    aux_ciclo                      shift and go to state 30
    objeto_aAcceso                 shift and go to state 31

state 16

    (8) aux6 -> funcion .
    (14) aux6 -> funcion . aux6
    (6) aux6 -> . vars
    (7) aux6 -> . constructor
    (8) aux6 -> . funcion
    (9) aux6 -> . estatuto
    (10) aux6 -> . condicion
    (11) aux6 -> . ciclo
    (12) aux6 -> . vars aux6
    (13) aux6 -> . constructor aux6
    (14) aux6 -> . funcion aux6
    (15) aux6 -> . estatuto aux6
    (16) aux6 -> . condicion aux6
    (17) aux6 -> . ciclo aux6
    (66) vars -> . VAR aux2 COLON tipo_simple
    (67) vars -> . VAR aux2 COLON tipo_compuesto
    (68) vars -> . VAR ID LBRACKET cint RBRACKET COLON tipo_simple
    (69) vars -> . VAR ID LBRACKET cint RBRACKET COLON tipo_compuesto
    (70) vars -> . VAR ID LBRACKET cint RBRACKET LBRACKET cint RBRACKET COLON tipo_simple
    (71) vars -> . VAR ID LBRACKET cint RBRACKET LBRACKET cint RBRACKET COLON tipo_compuesto
    (25) constructor -> . PUBLIC ID LPAREN param RPAREN bloque
    (27) funcion -> . scope type DEF id LPAREN param aux_param RPAREN contexto_func
    (28) funcion -> . scope VOID DEF id LPAREN param aux_param RPAREN contexto_func
    (47) estatuto -> . asignacion
    (48) estatuto -> . escritura
    (49) estatuto -> . llamada_func
    (50) estatuto -> . objeto_metodo
    (51) estatuto -> . lectura
    (18) condicion -> . IF LPAREN gotoF RPAREN bloque
    (19) condicion -> . IF LPAREN gotoF RPAREN bloque elif
    (23) ciclo -> . aux_ciclo WHILE LPAREN gotoF RPAREN bloque
    (43) scope -> .
    (44) scope -> . PRIVATE
    (45) scope -> . PUBLIC
    (46) scope -> . PROTECTED
    (78) asignacion -> . ID EQUALS expresion
    (79) asignacion -> . ID EQUALS llamada_func
    (80) asignacion -> . ID EQUALS objeto_metodo
    (81) asignacion -> . objeto_aAcceso EQUALS expresion
    (82) asignacion -> . objeto_aAcceso EQUALS llamada_func
    (83) asignacion -> . objeto_aAcceso EQUALS objeto_metodo
    (84) asignacion -> . ID LBRACKET exp RBRACKET EQUALS expresion
    (85) asignacion -> . ID LBRACKET exp RBRACKET EQUALS llamada_func
    (86) asignacion -> . ID LBRACKET exp RBRACKET EQUALS objeto_metodo
    (87) asignacion -> . objeto_aAcceso LBRACKET exp RBRACKET EQUALS expresion
    (88) asignacion -> . objeto_aAcceso LBRACKET exp RBRACKET EQUALS llamada_func
    (89) asignacion -> . objeto_aAcceso LBRACKET exp RBRACKET EQUALS objeto_metodo
    (90) asignacion -> . ID LBRACKET exp RBRACKET LBRACKET exp RBRACKET EQUALS expresion
    (91) asignacion -> . ID LBRACKET exp RBRACKET LBRACKET exp RBRACKET EQUALS llamada_func
    (92) asignacion -> . ID LBRACKET exp RBRACKET LBRACKET exp RBRACKET EQUALS objeto_metodo
    (93) asignacion -> . objeto_aAcceso LBRACKET LBRACKET exp RBRACKET exp RBRACKET EQUALS expresion
    (94) asignacion -> . objeto_aAcceso LBRACKET LBRACKET exp RBRACKET exp RBRACKET EQUALS llamada_func
    (95) asignacion -> . objeto_aAcceso LBRACKET LBRACKET exp RBRACKET exp RBRACKET EQUALS objeto_metodo
    (57) escritura -> . PRINT LPAREN aux3 RPAREN
    (97) llamada_func -> . ID LPAREN aux RPAREN
    (96) objeto_metodo -> . ID PERIOD llamada_func
    (52) lectura -> . READ LPAREN aux4 RPAREN
    (24) aux_ciclo -> .
    (135) objeto_aAcceso -> . ID PERIOD ID

    RBRACE          reduce using rule 8 (aux6 -> funcion .)
    VAR             shift and go to state 20
    PUBLIC          shift and go to state 22
    IF              shift and go to state 29
    VOID            reduce using rule 43 (scope -> .)
    INT             reduce using rule 43 (scope -> .)
    FLOAT           reduce using rule 43 (scope -> .)
    CHAR            reduce using rule 43 (scope -> .)
    PRIVATE         shift and go to state 8
    PROTECTED       shift and go to state 10
    ID              shift and go to state 21
    PRINT           shift and go to state 32
    READ            shift and go to state 33
    WHILE           reduce using rule 24 (aux_ciclo -> .)
